--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,9 @@
 {
-    "name": "aitor24/localizer",
+    "name": "zymawy/localizer",
     "description": "Pakcage to change easily default locale in laravel 5.4",
     "require": {
         "php": ">=5.6.4",
-        "laravel/framework": "^5.4",
+        "laravel/framework": "5.*|^6.0|^7.0",
         "consoletvs/identify": "1.*"
     },
     "type": "translations",
